# Linux_tool_lib

./: README.md  build.sh
source/libsrc/: CMakeLists.txt
source/libsrc/src/: CMakeLists.txt
source/libsrc/utest/: CMakeLists.txt  utest.cpp
