INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../gtest_src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} UTEST_SRC)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/../gtest_src/gtest GTEST_SRC)
ADD_EXECUTABLE(utest ${UTEST_SRC} ${GTEST_SRC})
#TARGET_LINK_LIBRARIES(utest linux_tool pthread)
TARGET_LINK_LIBRARIES(utest pthread)
INSTALL(TARGETS utest RUNTIME DESTINATION ${CROSS_ARCHITECTURE}/utest)
